Fixing jumping.

--- a/app/assets/stylesheets/utils/_forms.sass
+++ b/app/assets/stylesheets/utils/_forms.sass
@@ -1,12 +1,12 @@
 form
   input, textarea
     width: 100%
-    padding: 0.75em 15px 1em
+    padding: 0.75em 15px 0.9em
     background: $white
+    border: none
     border-bottom: 1px solid $white
     margin: 0 0 2px 0
     font-size: 1.25em
-    border: none
     outline: none
     +custom-sans(light)
     z-index: 1
